--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@
 DATABASE_URL="postgresql://postgres:il221204@localhost:5432/nashi?schema=public"
 BOT_TOKEN="8077371688:AAEwOK9H1WOiErnljYgP7wJ9JuxFsMon1JA"
 JWT_SECRET="secret"
+MIXPANEL_TOKEN="abb0b0402185d73a599012552061cc63"
