--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "app-root-path": "^3.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mixpanel": "^0.18.0",
     "nestjs-telegraf": "^2.8.1",
     "passport": "^0.7.0",
     "reflect-metadata": "^0.1.13",
