changed: env.example

--- a/env.example
+++ b/env.example
@@ -2,3 +2,5 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/db?schema=public"
 BOT_TOKEN="9999999999:AAAAAAAAAAAAAAAAAAAAA"
 JWT_SECRET="secret"
 MIXPANEL_TOKEN="string"
+REDIS_URL=redis://localhost:6379
+URL=https://domain.ru
